fixed cut off view

--- a/Personal/MLQC/standard-gem/css/small.scss
+++ b/Personal/MLQC/standard-gem/css/small.scss
@@ -193,3 +193,42 @@ body {
     grid-column-start: 2;
     grid-column-end: 5;
 }
+
+.buy-containers {
+    display: grid;
+}
+
+.pull-1-container {
+    grid-column-start: 3;
+    grid-column-end: 8;
+}
+
+.pull-10-container {
+    grid-column-start: 10;
+    grid-column-end: 15;
+}
+
+//  .pull1
+.pull-button {
+    // padding-left: 2rem;
+    // padding-right: 2rem;
+    // padding-top: 0.5rem;
+    // padding-bottom: 0.5rem;
+    color: white;
+    // font-size: 1.5rem;
+    // opacity: 0.9;
+}
+
+.pull1 {
+    background-color: #93b4c6;
+    border: 2px solid #aecada;
+    font-family: 'EB Garamond', serif;
+    opacity: 0.5;
+}
+
+.pull10 {
+    background-color: #e99ab9;
+    border: 2px solid #edb8cc;
+    font-family: 'EB Garamond', serif;
+    opacity: 0.5;
+}
